Increase all action button widths by 2px to prevent text wrapping on ALL IN button
- All breakpoints updated: action-button-width increased by 2px
- Prevents text wrapping on ALL IN button which was making buttons too high

--- a/shared/styles/game-table-responsive.css
+++ b/shared/styles/game-table-responsive.css
@@ -33,7 +33,7 @@
   
   --table-padding: 32px;
   
-  --action-button-width: 140px;
+  --action-button-width: 142px;
   --action-button-height: 48px;
   --action-button-text: 16px;
   --action-button-padding-x: 24px;
@@ -82,7 +82,7 @@
     
     --table-padding: 30px;
     
-    --action-button-width: 80px;
+    --action-button-width: 82px;
     --action-button-height: 32px;
     --action-button-text: 11px;
     --action-button-padding-x: 10px;
@@ -132,7 +132,7 @@
     
     --table-padding: 29px;
     
-    --action-button-width: 76px;
+    --action-button-width: 78px;
     --action-button-height: 30px;
     --action-button-text: 10px;
     --action-button-padding-x: 10px;
@@ -182,7 +182,7 @@
     
     --table-padding: 28px;
     
-    --action-button-width: 72px;
+    --action-button-width: 74px;
     --action-button-height: 29px;
     --action-button-text: 10px;
     --action-button-padding-x: 9px;
@@ -232,7 +232,7 @@
     
     --table-padding: 27px;
     
-    --action-button-width: 68px;
+    --action-button-width: 70px;
     --action-button-height: 28px;
     --action-button-text: 10px;
     --action-button-padding-x: 9px;
@@ -282,7 +282,7 @@
     
     --table-padding: 24px;
     
-    --action-button-width: 105px;
+    --action-button-width: 107px;
     --action-button-height: 36px;
     --action-button-text: 12px;
     --action-button-padding-x: 14px;
@@ -332,7 +332,7 @@
     
     --table-padding: 22px;
     
-    --action-button-width: 98px;
+    --action-button-width: 100px;
     --action-button-height: 34px;
     --action-button-text: 11px;
     --action-button-padding-x: 12px;
@@ -382,7 +382,7 @@
     
     --table-padding: 21px;
     
-    --action-button-width: 91px;
+    --action-button-width: 93px;
     --action-button-height: 31px;
     --action-button-text: 10px;
     --action-button-padding-x: 11px;
@@ -432,7 +432,7 @@
     
     --table-padding: 19px;
     
-    --action-button-width: 84px;
+    --action-button-width: 86px;
     --action-button-height: 29px;
     --action-button-text: 10px;
     --action-button-padding-x: 10px;
@@ -482,7 +482,7 @@
     
     --table-padding: 18px;
     
-    --action-button-width: 77px;
+    --action-button-width: 79px;
     --action-button-height: 26px;
     --action-button-text: 9px;
     --action-button-padding-x: 9px;
@@ -582,7 +582,7 @@
     
     --table-padding: 14px;
     
-    --action-button-width: 63px;
+    --action-button-width: 65px;
     --action-button-height: 22px;
     --action-button-text: 7px;
     --action-button-padding-x: 7px;
